--- a/Library-System---Banque-Misr/flask_postgres/Dockerfile
+++ b/Library-System---Banque-Misr/flask_postgres/Dockerfile
@@ -18,4 +18,4 @@ ENV FLASK_APP=app.py
 ENV FLASK_ENV=development
 
 # Run app.py when the container launches
-ENTRYPOINT ["flask", "run", "--host=0.0.0.0"]
+CMD ["flask", "run", "--host=0.0.0.0"]
